; ModuleID = '/home/carl/AnghaBench/scrcpy/app/src/extr_event_converter.c_convert_mouse_buttons.c'
source_filename = "/home/carl/AnghaBench/scrcpy/app/src/extr_event_converter.c_convert_mouse_buttons.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SDL_BUTTON_LMASK = common dso_local global i32 0, align 4
@AMOTION_EVENT_BUTTON_PRIMARY = common dso_local global i32 0, align 4
@SDL_BUTTON_RMASK = common dso_local global i32 0, align 4
@AMOTION_EVENT_BUTTON_SECONDARY = common dso_local global i32 0, align 4
@SDL_BUTTON_MMASK = common dso_local global i32 0, align 4
@AMOTION_EVENT_BUTTON_TERTIARY = common dso_local global i32 0, align 4
@SDL_BUTTON_X1MASK = common dso_local global i32 0, align 4
@AMOTION_EVENT_BUTTON_BACK = common dso_local global i32 0, align 4
@SDL_BUTTON_X2MASK = common dso_local global i32 0, align 4
@AMOTION_EVENT_BUTTON_FORWARD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_mouse_buttons to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_mouse_buttons(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @SDL_BUTTON_LMASK, align 4
  %6 = and i32 %4, %5
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = load i32, i32* @AMOTION_EVENT_BUTTON_PRIMARY, align 4
  %10 = load i32, i32* %3, align 4
  %11 = or i32 %10, %9
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %2, align 4
  %14 = load i32, i32* @SDL_BUTTON_RMASK, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %12
  %18 = load i32, i32* @AMOTION_EVENT_BUTTON_SECONDARY, align 4
  %19 = load i32, i32* %3, align 4
  %20 = or i32 %19, %18
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %17, %12
  %22 = load i32, i32* %2, align 4
  %23 = load i32, i32* @SDL_BUTTON_MMASK, align 4
  %24 = and i32 %22, %23
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %21
  %27 = load i32, i32* @AMOTION_EVENT_BUTTON_TERTIARY, align 4
  %28 = load i32, i32* %3, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %26, %21
  %31 = load i32, i32* %2, align 4
  %32 = load i32, i32* @SDL_BUTTON_X1MASK, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %30
  %36 = load i32, i32* @AMOTION_EVENT_BUTTON_BACK, align 4
  %37 = load i32, i32* %3, align 4
  %38 = or i32 %37, %36
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %35, %30
  %40 = load i32, i32* %2, align 4
  %41 = load i32, i32* @SDL_BUTTON_X2MASK, align 4
  %42 = and i32 %40, %41
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %48

44:                                               ; preds = %39
  %45 = load i32, i32* @AMOTION_EVENT_BUTTON_FORWARD, align 4
  %46 = load i32, i32* %3, align 4
  %47 = or i32 %46, %45
  store i32 %47, i32* %3, align 4
  br label %48

48:                                               ; preds = %44, %39
  %49 = load i32, i32* %3, align 4
  ret i32 %49
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
